force-app/main/default/objects/Notification_Detail__c/Notification_Detail__c.object-meta.xml
<CustomObject>
    <label>Notification Detail</label>
    <nameField>
        <label>Notification Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>