force-app/main/default/objects/Notification_Detail__c/fields/Impacted_Fields__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Fields__c</fullName>
    <description>Hold a list of fields for which notification should trigger, only applicable for Instant notification.</description>
    <label>Impacted Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>