force-app/main/default/objects/Notification_Detail__c/fields/Is_Instant_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Instant_Notification__c</fullName>
    <description>Flag to determine instant creation of notification details</description>
    <defaultValue>false</defaultValue>
    <label>Is Instant Notification</label>
    <type>Checkbox</type>
</CustomField>