force-app/main/default/objects/Notification_Detail__c/fields/MS_Teams_Recipient__c.field-meta.xml
<CustomField>
    <fullName>MS_Teams_Recipient__c</fullName>
    <description>Endpoint of webhook</description>
    <label>MS Teams Recipient</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>