force-app/main/default/objects/Notification_Detail__c/fields/Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Notification_Template__c</fullName>
    <description>To capture notification Template</description>
    <label>Notification Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>