force-app/main/default/objects/Notification_Detail__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Name of queue or Person</description>
    <label>Recipient Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>