force-app/main/default/objects/Notification_Detail__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region for which notification will work</description>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
	    <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>AMR</fullName>
            </value>
            
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>