force-app/main/default/objects/Notification_Detail__c/fields/Rule_Syntax__c.field-meta.xml
<CustomField>
    <fullName>Rule_Syntax__c</fullName>
    <description>To capture rule syntax of notification</description>
    <label>Rule Syntax</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>