force-app/main/default/objects/Notification_Detail__c/fields/Send_Only_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>Send_Only_After_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, notifications will only be sent during holidays and non-business hours.</description>
    <inlineHelpText>If this is checked, notifications will only be sent during holidays and non-business hours.</inlineHelpText>
    <label>Send Only After Hours</label>
    <type>Checkbox</type>
</CustomField>