force-app/main/default/objects/Notification_Detail__c/fields/Send_Only_During_Office_Hours__c.field-meta.xml
<CustomField>
    <fullName>Send_Only_During_Office_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, notifications will only be sent during office hours. Notifications will not be sent on holidays.</description>
    <inlineHelpText>If this is checked, notifications will only be sent during office hours. Notifications will not be sent on holidays.</inlineHelpText>
    <label>Send Only During Office Hours</label>
    <type>Checkbox</type>
</CustomField>