force-app/main/default/objects/Notification_Detail__c/fields/Trigger_Notification_After_in_HRS__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Notification_After_in_HRS__c</fullName>
    <description>The notification will be triggered once all criteria have been met for the amount of time defined here.</description>
    <inlineHelpText>The notification will be triggered once all criteria have been met for the amount of time defined here.</inlineHelpText>
    <label>Trigger Notification After (in HRS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>