force-app/main/default/objects/Notification_Detail__c/validationRules/checkDataIntegrity.validationRule-meta.xml
<ValidationRule>
    <fullName>checkDataIntegrity</fullName>
    <active>true</active>
    <description>Validation rule to restrict users in filling contradicting data.</description>
    <errorConditionFormula>OR(
       AND(Send_Only_After_Hours__c, Send_Only_During_Office_Hours__c),
       AND(Is_Instant_Notification__c,NOT(ISBLANK( Trigger_Notification_After_in_HRS__c ))),
       AND(NOT(Is_Instant_Notification__c),ISBLANK( Trigger_Notification_After_in_HRS__c ))
    )</errorConditionFormula>
    <errorMessage>Please correct the following:
            You cannot have both &quot;Send Only After Hours&quot; and &quot;Send Only During Office Hours&quot; checked.
            You cannot have both &quot;Instant&quot; checked and a value in &quot;Trigger Notification After (in HRS)&quot;</errorMessage>
</ValidationRule>