force-app/main/default/objects/Notification_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Region__c</columns>
    <columns>User_Group__c</columns>
    <columns>Is_Instant_Notification__c</columns>
    <columns>Send_Only_During_Office_Hours__c</columns>
    <columns>Send_Only_After_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>